[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
docs = { path = "../docs" }

reqwest = { version = "0.11.22", features = ["blocking"] }
cargo_metadata = "0.18.1"
tar = "0.4.40"
flate2 = "1.0.28"
regex = "1.10.2"

naga_oil_v0_16 = { package = "naga_oil", version = "0.16.0", optional = true }
naga_oil_v0_14 = { package = "naga_oil", version = "0.14.0", optional = true }
naga_oil_v0_13 = { package = "naga_oil", version = "0.13.0", optional = true }
naga_oil_v0_11 = { package = "naga_oil", version = "0.11.0", optional = true }
naga_oil_v0_10 = { package = "naga_oil", version = "0.10.1", optional = true }
naga_oil_v0_08 = { package = "naga_oil", version = "0.8.2", optional = true }

naga_v23_1 = { package = "naga", version = "23.1.0", optional = true }
naga_v0_20 = { package = "naga", version = "0.20.0", optional = true }
naga_v0_19 = { package = "naga", version = "0.19.2", optional = true }
naga_v0_14 = { package = "naga", version = "0.14.1", optional = true }
naga_v0_13 = { package = "naga", version = "0.13.0", optional = true }
naga_v0_12 = { package = "naga", version = "0.12.3", optional = true }

[features]
default = []

backend_v0_15 = ["dep:naga_oil_v0_16", "dep:naga_v23_1"] # bevy 0.15.x
backend_v0_14 = ["dep:naga_oil_v0_14", "dep:naga_v0_20"] # bevy 0.14.x
backend_v0_13 = ["dep:naga_oil_v0_13", "dep:naga_v0_19"] # bevy 0.13.x
backend_v0_11 = ["dep:naga_oil_v0_11", "dep:naga_v0_14"] # ...
backend_v0_10 = ["dep:naga_oil_v0_10", "dep:naga_v0_13"] # bevy 0.12.x
backend_v0_08 = ["dep:naga_oil_v0_08", "dep:naga_v0_12"] # bevy 0.11.x
